--- a/app/index.html
+++ b/app/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="capstone">
 <head lang="en">
-    <meta charset="UTF-8">
-    <title>Bloc Base Project</title>
-    <link rel="stylesheet" href="/styles/main.css">
+  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bloc Base Project</title>
+  <link rel="stylesheet" href="/styles/main.css">
 </head>
+
 <body>
-    <h4>Hello, World???</h4>
-    <script src="/scripts/app.js"></script>
+  <ui-view></ui-view>
+  <!-- Angular -->
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+  <!-- AngularUI Router -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
+  <!-- Application Files -->
+  <script src="/scripts/app.js"></script>
 </body>
+
 </html>
