--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,8 @@
   <!-- Application Files -->
   <script src="/scripts/app.js"></script>
   <script src="/scripts/controllers/HomeCtrl.js"></script>
+  <script src="/scripts/services/NodeClient.js"></script>
+  <script src="/scripts/bundle.js"></script>
 </body>
 
 </html>
