--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html ng-app="capstone">
+
 <head lang="en">
   <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-signin-client_id" content="339861204473-rvt109gib76mqq46o1ij7mh0jenk4p2e.apps.googleusercontent.com">
   <title>Bloc Base Project</title>
   <link rel="stylesheet" href="/styles/main.css">
   <!-- Latest compiled and minified Bootstrap CSS -->
@@ -9,6 +11,18 @@
 </head>
 
 <body>
+  <div ng-controller="HomeCtrl as home">
+    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+  </div>
+  <a href="#" onclick="signOut();">Sign out</a>
+  <script>
+    function signOut() {
+      var auth2 = gapi.auth2.getAuthInstance();
+      auth2.signOut().then(function() {
+        console.log('User signed out.');
+      });
+    }
+  </script>
   <ui-view></ui-view>
   <!-- Angular -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
@@ -21,6 +35,7 @@
   <!-- Application Files -->
   <script src="/scripts/app.js"></script>
   <script src="/scripts/controllers/HomeCtrl.js"></script>
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
 </body>
 
 </html>
