--- a/app/index.html
+++ b/app/index.html
@@ -21,13 +21,13 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
   <!-- Angular Route -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.min.js"></script>
+  <!-- Google API -->
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
   <!-- Application Files -->
   <script src="/scripts/app.js"></script>
   <script src="/scripts/controllers/HomeCtrl.js"></script>
-  <script src="https://apis.google.com/js/platform.js" async defer></script>
   <script src="/scripts/services/GoogleOauth.js"></script>
   <script src="/scripts/services/ZenFactory.js"></script>
-  <script src="/scripts/bundle.js"></script>
 </body>
 
 </html>
