--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,7 @@
   <!-- Application Files -->
   <script src="/scripts/app.js"></script>
   <script src="/scripts/controllers/HomeCtrl.js"></script>
+  <script src="/scripts/controllers/TicketCtrl.js"></script>
   <script src="/scripts/services/GoogleOauth.js"></script>
   <script src="/scripts/services/ZenFactory.js"></script>
 </body>
