--- a/app/index.html
+++ b/app/index.html
@@ -23,12 +23,14 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.min.js"></script>
   <!-- Google API -->
   <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <!-- Angular Cookies -->
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-cookies.js"></script>
   <!-- Application Files -->
   <script src="/scripts/app.js"></script>
-  <script src="/scripts/controllers/HomeCtrl.js"></script>
-  <script src="/scripts/controllers/TicketCtrl.js"></script>
   <script src="/scripts/services/GoogleOauth.js"></script>
   <script src="/scripts/services/ZenFactory.js"></script>
+  <script src="/scripts/controllers/HomeCtrl.js"></script>
+  <script src="/scripts/controllers/TicketCtrl.js"></script>
 </body>
 
 </html>
