begin createTicket function, create template + controller

--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@
   <script src="/scripts/services/ZenFactory.js"></script>
   <script src="/scripts/controllers/HomeCtrl.js"></script>
   <script src="/scripts/controllers/TicketCtrl.js"></script>
+  <script src="/scripts/controllers/NewTicketCtrl.js"></script>
 </body>
 
 </html>
