begin upload file feature

--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,10 @@
   <script src="https://apis.google.com/js/platform.js" async defer></script>
   <!-- Angular Cookies -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-cookies.js"></script>
+  <!-- Ng-file-upload -->
+  <!-- shim is needed to support non-HTML5 FormData browsers (IE8-9)-->
+  <script src="ng-file-upload-shim.min.js"></script>
+  <script src="ng-file-upload.min.js"></script>
   <!-- Application Files -->
   <script src="/scripts/app.js"></script>
   <script src="/scripts/services/GoogleOauth.js"></script>
