create Closed Ticket state

--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,9 @@
         <a ui-sref="home" class="global-options">Open Tickets</a>
       </li>
       <li>
+        <a ui-sref="closedTickets" class="global-options">Recently Closed Tickets</a>
+      </li>
+      <li>
         <a ui-sref="newTicket" class="global-options">Create Ticket</a>
       </li>
     </ul>
@@ -61,6 +64,7 @@
   <script src="/scripts/controllers/TicketCtrl.js"></script>
   <script src="/scripts/controllers/NewTicketCtrl.js"></script>
   <script src="/scripts/controllers/IndexCtrl.js"></script>
+  <script src="/scripts/controllers/ClosedTicketCtrl.js"></script>
 </body>
 
 </html>
