--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,8 @@
   <script src="/scripts/controllers/NewTicketCtrl.js"></script>
   <script src="/scripts/controllers/IndexCtrl.js"></script>
   <script src="/scripts/controllers/ClosedTicketCtrl.js"></script>
+  <!-- <script src="/scripts/directives/angular-sham-spinner.js"></script> -->
+  <!-- <script src="/bower_components/angular-sham-spinner/angular-sham-spinner.js"></script> -->
 </body>
 
 </html>
