--- a/app/index.html
+++ b/app/index.html
@@ -80,6 +80,7 @@
   <script src="/scripts/app.js"></script>
   <script src="/scripts/services/GoogleOauth.js"></script>
   <script src="/scripts/services/ZenFactory.js"></script>
+  <script src="/scripts/services/SortData.js"></script>
   <script src="/scripts/controllers/HomeCtrl.js"></script>
   <script src="/scripts/controllers/TicketCtrl.js"></script>
   <script src="/scripts/controllers/NewTicketCtrl.js"></script>
