create incidents modal

--- a/app/index.html
+++ b/app/index.html
@@ -87,6 +87,8 @@
   <script src="/scripts/controllers/IndexCtrl.js"></script>
   <script src="/scripts/controllers/ClosedTicketCtrl.js"></script>
   <script src="/scripts/controllers/MyTicketCtrl.js"></script>
+  <script src="/scripts/controllers/IncidentsModalCtrl.js"></script>
+  <script src="/scripts/controllers/IncidentsModalInstanceCtrl.js"></script>
 </body>
 
 </html>
