--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 <head lang="en">
   <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
   <meta name="google-signin-client_id" content="339861204473-rvt109gib76mqq46o1ij7mh0jenk4p2e.apps.googleusercontent.com">
-  <title>Bloc Base Project</title>
+  <title>Support Ticket Portal</title>
   <link rel="stylesheet" href="/styles/main.css">
   <!-- Latest compiled and minified Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
